# SlicerTestExtension

./: CMakeLists.txt
cli/: CMakeLists.txt  cli.cxx  cli.xml
cpp/: CMakeLists.txt  qSlicercppModule.cxx  qSlicercppModule.h  qSlicercppModuleWidget.cxx  qSlicercppModuleWidget.h
cpp/Logic/: vtkSlicercppLogic.cxx  vtkSlicercppLogic.h
cpp/Resources/: qSlicercppModule.qrc
cpp/Resources/UI/: qSlicercppFooBarWidget.ui  qSlicercppModuleWidget.ui
cpp/Widgets/: qSlicercppFooBarWidget.cxx  qSlicercppFooBarWidget.h
python/: CMakeLists.txt  python.py
